--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,36 @@
 ################################################################################
 
 /.vs
-/crm-vc/.vs
-/newtonsoft-json/.ivy
-/newtonsoft-json/.vs
+/dnsclient/.vs/IvySample.DnsClient
+#Ignore thumbnails created by Windows
+Thumbs.db
+#Ignore files built by Visual Studio
+*.obj
+*.exe
+*.pdb
+*.user
+*.aps
+*.pch
+*.vspscc
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.cache
+*.ilk
+*.log
+[Bb]in
+[Dd]ebug*/
+*.lib
+*.sbr
+obj/
+[Rr]elease*/
+_ReSharper*/
+[Tt]est[Rr]esult*
+.vs/
+.idea/
+#Nuget packages folder
+packages/
