--- a/aspose-words/AsposeWords.csproj
+++ b/aspose-words/AsposeWords.csproj
@@ -13,6 +13,7 @@
     <EmbeddedResource Include="Assets/**/*" />
   </ItemGroup>
 <ItemGroup>
+    <PackageReference Include="Aspose.Words" Version="25.9.0" />
     <PackageReference Include="Ivy" Version="1.0.110.0" />
   </ItemGroup>
   <ItemGroup>
